feat: spinner for waiting comps

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
           <div></div>
         </button>
 
+        <div class="result__board-wait" aria-label="The house picked">
+          <div class="lds-ripple"><div></div><div></div></div>
+        </div>
+      </section>
+
+      <section class="result__board">
+        <button class="player paper" aria-label="You picked">
+          <div></div>
+        </button>
+
         <button class="computer scissors" aria-label="The house picked">
           <div></div>
         </button>
