--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
 
         <div class="result__board-wait" aria-label="The house picked">
-          <div class="lds-ripple"><div></div><div></div></div>
+          <div class="loader"><div></div><div></div></div>
         </div>
       </section>
 
