feat: add localStorage for score

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <footer class="footer">
       <button class="button">Rules</button>
-      <button class="button reset-score">Reset score</button>
+      <button class="button reset-score">Reset</button>
       <p class="footer__text">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a><br>
         Coded by @<a href="http://github.com/ya-boris?tab=repositories">ya_boris</a>
