feat: add responsive

--- a/index.html
+++ b/index.html
@@ -51,46 +51,23 @@
           <div></div>
         </button>
       </section>
-
-      <!-- <section class="result__board">
-        <button class="player paper" aria-label="You picked">
-          <div></div>
-        </button>
-
-        <button class="computer scissors" aria-label="The house picked">
-          <div></div>
-        </button>
-      </section>
-
-      <section class="result__board result__finish">
-        <button class="player paper" aria-label="You picked">
-          <div></div>
-        </button>
-
-        <div class="result__box">
-          <p class="result__box-text">You lose</p>
-          <button class="result__box-btn">Play Again</button>
-        </div>
-
-        <button class="computer rock is-winner" aria-label="The house picked">
-          <div></div>
-        </button>
-      </section> -->
     </main>
 
     <div class="modal">
       <div class="modal__dialog">
+        <p class="modal__dialog-title">Rules</p>
+        <img class="modal__dialog-image" src="./images/image-rules.svg" alt="Rules">
         <button class="modal__dialog-button">
           <img src="./images/icon-close.svg" alt="Close">
         </button>
-        <p class="modal__dialog-title">Rules</p>
-        <img class="modal__dialog-image" src="./images/image-rules.svg" alt="Rules">
       </div>
     </div>
 
     <footer class="footer">
-      <button class="button">Rules</button>
-      <button class="button reset-score">Reset</button>
+      <div class="footer__button-wrapper">
+        <button class="button reset-score">Reset</button>
+        <button class="button show-rules">Rules</button>
+      </div>
       <p class="footer__text">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a><br>
         Coded by @<a href="http://github.com/ya-boris?tab=repositories">ya_boris</a>
