--- a/simple/index.html
+++ b/simple/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Rock, Paper, Scissors, Lizard, Spock</title>
+  <title>Frontend Mentor | Rock, Paper, Scissors</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <main class="container">
       <section class="score__board">
         <div class="score__board-logo">
-          <img src="./images/logo-bonus.svg" alt="Rock, Paper, Scissors, Lizard, Spock">
+          <img src="./images/logo.svg" alt="Rock, Paper, Scissors">
         </div>
         <div class="score__board-numbers">
           <p class="score__board-text">Score</p>
@@ -22,16 +22,10 @@
       </section>
 
       <section class="game__board">
-        <button class="scissors">
-          <div></div>
-        </button>
-        <button class="spock">
-          <div></div>
-        </button>
         <button class="paper">
           <div></div>
         </button>
-        <button class="lizard">
+        <button class="scissors">
           <div></div>
         </button>
         <button class="rock">
@@ -62,7 +56,7 @@
     <div class="modal">
       <div class="modal__dialog">
         <p class="modal__dialog-title">Rules</p>
-        <img class="modal__dialog-image" src="./images/image-rules-bonus.svg" alt="Rules">
+        <img class="modal__dialog-image" src="./images/image-rules.svg" alt="Rules">
         <button class="modal__dialog-button">
           <img src="./images/icon-close.svg" alt="Close">
         </button>
@@ -75,7 +69,7 @@
         <button class="button show-rules">Rules</button>
       </div>
       <p class="footer__text">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | <a href="./simple/" >Simple version</a><br>
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | <a href="../" >Bonus version</a><br>
         Coded by @<a href="http://github.com/ya-boris?tab=repositories">ya_boris</a>
       </p>
     </footer>
