update: readme and link to github

--- a/simple/index.html
+++ b/simple/index.html
@@ -70,7 +70,7 @@
       </div>
       <p class="footer__text">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | <a href="../" >Bonus version</a><br>
-        Coded by @<a href="http://github.com/ya-boris?tab=repositories">ya_boris</a>
+        Coded by @<a href="http://github.com/ya-boris">ya_boris</a>
       </p>
     </footer>
   </div>
